using vthreads and java 21